2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* dostime.c (dos2unixtime): Added casts to int.
	(unix2dostime) Added casts to ub4.
	* dostime.h (dos2unixtime, unix2dostime): Changed
	prototypes to use ub4 instead of unsigned long.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (extract_jar): Changed rdamt to size_t.
	* pushback.c (pb_push): Changed in_amt, wrap to size_t.
	Added a size_t cast, and removed an int cast. 
	(pb_read) Changed out_amt, wrap, tmp to size_t.
	Added a size_t cast, and removed an int cast.
	Added new variable num_read.
	* pushback.h (pb_push, pb_read): Changed prototypes
	to use size_t.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_down): Changed off to off_t.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* shift.c (shift_up, shift_down): Changed len to size_t.
	Use new variable num_read to count read bytes.

2007-02-14  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, README, NEWS: Bump version number to 0.96-pre.
	* Makefile.am (splint): Use libfastjar_convenience_la_SOURCES.
        * configure, Makefile.in: Regenerated.

2007-02-13  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, README, NEWS: Bump version number to 0.95.
	* configure: Regenerated.

2007-02-13  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Build the fastjar library as a convenience library.
	* Makefile.in: Regenerate.

2007-02-12  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (get_next_arg, add_to_jar_with_dir): Use
	EXIT_FAILURE.

2007-02-12  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Removed fastjar.texi.
	* Makefile.in: Regenerated.

2007-02-12  Alfred M. Szmidt  <ams@gnu.org>

	* jartool.c (MAXPATHLEN) [!MAXPATHLEN]: Removed macro.
	(get_next_arg): Allocate memory dynamiclly for S.
	(add_to_jar_with_dir): Allocate memory dynamiclly for OLD_DIR.

2007-02-12  Matthias Klose  <doko@ubuntu.com>

	* fastjar.texi: Set version to 0.95.

2007-02-12  Matthias Klose  <doko@ubuntu.com>
